--- a/web/front/package.json
+++ b/web/front/package.json
@@ -22,17 +22,18 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "framer-motion": "^4.1.17",
-    "react": "17.0.2",
+    "react": "^18.2.0",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^3.7.0",
     "react-custom-scrollbars-2": "^4.2.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^12.0.4",
     "react-icons": "^4.3.1",
     "react-is": "^18.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "react-use-websocket": "^4.4.0",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
     "web-vitals": "^1.1.2"
