--- a/.env.default
+++ b/.env.default
@@ -1,22 +1,18 @@
 # [SYNOLOGY]
-SYNOLOGY_HOST='x.x.x.x'
+SYNOLOGY_HOST='xxx.xxx.xxx.xxx'
 PG_USERNAME='tagger'
-PG_PASSWORD='<super secret password>'
-SSH_PORT='xx'
-SSH_USERNAME='xxx'
-SSH_PASSWORD='yyyyyy'
+PG_PASSWORD='<super random password>' # Replace this with anything. The system can create the user and set whatever you put here as your passwd
+SSH_PORT='22'
+SSH_USERNAME='<your synology user>' # Remember to turn SSH on
+SSH_PASSWORD='<your synology password>'
 
 # [LOCAL]
-MEDIA_FOLDER='<path to remote folder or mounted point>'
+MEDIA_FOLDER='/media/synology-nas' # don't change this
 THRESHOLD='0.4'
 VIDEO_THRESHOLD='0.6'
 DEVICE='gpu'
-MYSQL_USER='tagger' # you don't need to change this
-MYSQL_PASSWORD='tagger!123#' # you don't need to change this
+MYSQL_USER='tagger' # don't change this
+MYSQL_PASSWORD='tagger!123#' # don't change this
 
 # [CRONTAB]
-MINUTE='0'
-HOUR='2'
-DAY_OF_MONTH='*'
-MONTH='*'
-DAY_OF_WEEK='*'
+CRONTAB='0 2 * * *'
