--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,135 @@
-psycopg2-binary==2.9.5
-SQLAlchemy==2.0.2
+addict==2.4.0
+aliyun-python-sdk-core==2.13.36
+aliyun-python-sdk-kms==2.16.1
+amqp==5.1.1
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+bcrypt==4.0.1
+beautifulsoup4 @ file:///home/linux1/recipes/ci/beautifulsoup4_1610988766420/work
+bidict==0.22.1
+billiard==3.6.4.0
+brotlipy==0.7.0
+cached-property==1.5.2
+celery==5.2.7
+certifi==2021.5.30
+cffi==1.15.1
+chardet @ file:///tmp/build/80754af9/chardet_1605303159953/work
+charset-normalizer==3.2.0
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+conda==4.10.1
+conda-build==3.21.4
+conda-package-handling @ file:///tmp/build/80754af9/conda-package-handling_1618262151086/work
+crcmod==1.7
+cron-descriptor==1.4.0
+cryptography @ file:///tmp/build/80754af9/cryptography_1616769182610/work
+cycler==0.11.0
+decorator @ file:///tmp/build/80754af9/decorator_1621259047763/work
+distlib==0.3.7
+dnspython==2.1.0
+filelock==3.12.2
+Flask==2.2.5
+Flask-Cors==4.0.0
+flask-sock==0.6.0
+fonttools==4.38.0
+glob2 @ file:///home/linux1/recipes/ci/glob2_1610991677669/work
+greenlet==2.0.2
+h11==0.14.0
+idna @ file:///tmp/build/80754af9/idna_1593446292537/work
+importlib-metadata==4.13.0
+install==1.3.5
+ipython @ file:///tmp/build/80754af9/ipython_1617118429768/work
+ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+itsdangerous==2.1.2
+jedi==0.17.0
+Jinja2 @ file:///tmp/build/80754af9/jinja2_1621238361758/work
+jmespath==0.10.0
+kiwisolver==1.4.4
+kombu==5.2.4
+libarchive-c @ file:///tmp/build/80754af9/python-libarchive-c_1617780486945/work
+Markdown==3.4.4
+markdown-it-py==2.2.0
+MarkupSafe==2.1.3
+matplotlib==3.5.3
+mdurl==0.1.2
+mkl-fft==1.3.0
+mkl-random @ file:///tmp/build/80754af9/mkl_random_1618853974840/work
+mkl-service==2.3.0
+mmcv==2.0.1
+-e git+https://github.com/open-mmlab/mmdetection.git@f78af7785ada87f1ced75a2313746e4ba3149760#egg=mmdet
+mmengine==0.8.4
+mod-wsgi==4.9.4
+mod-wsgi-httpd==2.4.54.1
+model-index==0.1.11
+numpy @ file:///tmp/build/80754af9/numpy_and_numpy_base_1620831194891/work
+olefile==0.46
+opencv-python==4.8.0.76
+opendatalab==0.0.10
+openmim==0.3.9
+openxlab==0.0.10
+ordered-set==4.1.0
+oss2==2.17.0
+packaging==23.1
+pandas==1.3.5
+paramiko==3.3.1
+parso @ file:///tmp/build/80754af9/parso_1617223946239/work
+pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow==9.5.0
 pillow-heif==0.9.3
+pipenv==2023.8.28
+pkginfo==1.7.0
+platformdirs==3.10.0
+prompt-toolkit==3.0.39
+psutil @ file:///tmp/build/80754af9/psutil_1612298016854/work
+psycopg2-binary==2.9.5
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pyasn1==0.5.0
+pycocotools==2.0.7
+pycosat==0.6.3
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pycryptodome==3.18.0
+Pygments==2.16.1
+PyMySQL==1.1.0
+PyNaCl==1.5.0
+pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1605545627475/work
+pyparsing==3.1.1
+pysmb==1.2.9.1
+PySocks @ file:///tmp/build/80754af9/pysocks_1594394576006/work
+python-dateutil==2.8.2
+python-dotenv==0.21.1
+python-engineio==4.7.0
+python-etcd==0.4.5
+python-socketio==5.9.0
+pytz==2023.3
+PyYAML==6.0.1
+requests==2.28.2
+rich==13.5.2
+ruamel-yaml-conda @ file:///tmp/build/80754af9/ruamel_yaml_1616016701961/work
+scipy==1.7.3
+shapely==2.0.1
+simple-websocket==0.10.1
+six @ file:///tmp/build/80754af9/six_1623709665295/work
+soupsieve @ file:///tmp/build/80754af9/soupsieve_1616183228191/work
+SQLAlchemy==2.0.2
+tabulate==0.9.0
+termcolor==2.3.0
+terminaltables==3.1.10
+tomli==2.0.1
+torch==1.9.0
+torchelastic==0.2.0
+torchtext==0.10.0
+torchvision==0.10.0
+tqdm==4.65.2
+traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
+typing-extensions==4.7.1
+urllib3 @ file:///tmp/build/80754af9/urllib3_1603305693037/work
+vine==5.0.0
+virtualenv==20.24.3
+wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+Werkzeug==2.2.3
+wsproto==1.2.0
+yapf==0.40.1
+zipp==3.15.0
