--- a/web/front/package.json
+++ b/web/front/package.json
@@ -30,6 +30,7 @@
     "react-dropzone": "^12.0.4",
     "react-icons": "^4.3.1",
     "react-is": "^18.0.0",
+    "react-js-cron": "^4.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
