--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 ml_models
+web/front/node_modules
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
