--- a/.gitignore
+++ b/.gitignore
@@ -105,7 +105,8 @@ ipython_config.py
 __pypackages__/
 
 # Celery stuff
-celerybeat-schedule
+celerybeat-schedule.bak
+celerybeat-schedule.dat
 celerybeat.pid
 
 # SageMath parsed files
