--- a/.env.default
+++ b/.env.default
@@ -1,6 +1,6 @@
 # [SYNOLOGY]
 SYNOLOGY_HOST='xxx.xxx.xxx.xxx'
-PG_USERNAME='tagger'
+PG_USERNAME='tagger' 
 PG_PASSWORD='<super random password>' # Replace this with anything. The system can create the user and set whatever you put here as your passwd
 SSH_PORT='22'
 SSH_USERNAME='<your synology user>' # Remember to turn SSH on
@@ -13,6 +13,10 @@ VIDEO_THRESHOLD='0.6'
 DEVICE='gpu'
 MYSQL_USER='tagger' # don't change this
 MYSQL_PASSWORD='tagger!123#' # don't change this
+
+# [PRE TRAINED MODEL]
+CONFIG_FILE='faster-rcnn_r50-caffe_fpn_ms-3x_coco.py'
+CHECKPOINT='faster_rcnn_r50_caffe_fpn_mstrain_3x_coco_20210526_095054-1f77628b.pth'
 
 # [CRONTAB]
 CRONTAB='0 2 * * *'
